--- a/aluraflix/index.html
+++ b/aluraflix/index.html
@@ -1,6 +1,9 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Aluraflix</title>
 </head>
 
@@ -8,7 +11,7 @@
     <header>ALURAFLIX</header>
 
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
         </div>
